[package]
name = "macrolipid"
version = "0.1.0"
authors = ["Matthew J. P. Walker <walkerm930@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.18.0"
ndarray = "0.15.6"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-glutin_window = "0.71.0"
piston_window = "0.128.0"
rusttype = "0.9.3"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]
