[package]
name = "macrolipid"
version = "0.1.0"
authors = ["Matthew J. P. Walker <walkerm930@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.18.0"
image = "0.25.6"
ndarray = "0.16.1"
piston = "1.0.0"
piston2d-graphics = "0.45.0"
piston2d-opengl_graphics = "0.89.0"
pistoncore-glutin_window = "0.72.0"
[dependencies.rand]
version = "0.9"
features = ["small_rng"]
